# bootcamp-day2

./: package-lock.json  tsconfig.json
src/bootcamp-day2-backend/: Cargo.toml  bootcamp-day2-backend.did
src/bootcamp-day2-backend/src/: lib.rs  random.rs
src/bootcamp-day2-frontend/: tailwind.config.js
src/bootcamp-day2-frontend/src/: App.vue  index.css  index.scss
src/bootcamp-day2-frontend/src/components/: Blog.vue
