[package]
name = "bootcamp-day2-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
log = "0.4.21"
oorandom = "11.1.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["v4", "std", "rng"], default-features = false}
